--- a/src/app/src/main/res/layout/fragment_profile.xml
+++ b/src/app/src/main/res/layout/fragment_profile.xml
@@ -6,22 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".user.profile.ProfileFragment">
 
-    <ImageView
-        android:id="@+id/profile_picture"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="180sp"
-        android:layout_marginTop="20sp"
-        android:layout_marginStart="20sp"
-        android:layout_marginEnd="20sp"
-
-        android:contentDescription="Avatar Placeholder"
-        android:scaleType="centerCrop"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@tools:sample/avatars"
-        tools:ignore="HardcodedText"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
+        android:layout_height="wrap_content"
+        >
 
         <TextView
             android:id="@+id/textView"
