--- a/src/app/src/main/res/layout/fragment_create_event.xml
+++ b/src/app/src/main/res/layout/fragment_create_event.xml
@@ -37,6 +37,7 @@
                 android:layout_marginEnd="8dp"
                 android:textAlignment="center"
                 android:textSize="20sp"
+                android:layout_margin="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/image_create_event_banner" />
@@ -50,6 +51,7 @@
                 android:layout_marginEnd="8dp"
                 android:textAlignment="textStart"
                 android:textSize="15sp"
+                android:layout_margin="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/text_create_event_title"/>
@@ -58,6 +60,7 @@
                 android:id="@+id/date_create_event"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="20dp"
                 app:layout_constraintEnd_toStartOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/text_create_event_description" />
@@ -67,6 +70,7 @@
                 android:id="@+id/time_create_event"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/date_create_event"
@@ -77,6 +81,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Enter the attendee limit"
+                android:layout_margin="20dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
@@ -90,6 +95,7 @@
                 android:id="@+id/create_event_attend_limit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="100dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/create_event_attend_limit_description_text"/>
@@ -104,6 +110,7 @@
                 android:layout_marginEnd="8dp"
                 android:textAlignment="center"
                 android:textSize="15sp"
+                android:layout_margin="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/create_event_attend_limit"/>
@@ -123,6 +130,7 @@
                     android:text="Generate QR Code"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="1"
+                    android:layout_margin="20dp"
                     app:layout_constraintEnd_toStartOf="@id/button_create_event_use_existing_description"
                     app:layout_constraintStart_toStartOf="parent" />
 
@@ -133,15 +141,11 @@
                     android:text="Use Existing Code"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="1"
+                    android:layout_margin="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/button_create_event_generate_qr_description"/>
 
             </LinearLayout>
-
-
-
-            <!-- TODO: Description QR Code View -->
-
 
 
             <TextView
@@ -154,6 +158,7 @@
                 android:layout_marginEnd="8dp"
                 android:textAlignment="center"
                 android:textSize="15sp"
+                android:layout_margin="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/linearlayout_create_event_description_qr"/>
@@ -173,6 +178,7 @@
                     android:text="Generate QR Code"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="1"
+                    android:layout_margin="20dp"
                     app:layout_constraintEnd_toStartOf="@id/button_create_event_use_existing_checkin"
                     app:layout_constraintStart_toStartOf="parent" />
 
@@ -183,13 +189,11 @@
                     android:text="Use Existing Code"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="1"
+                    android:layout_margin="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/button_create_event_generate_qr_checkin"/>
 
             </LinearLayout>
-
-
-            <!-- TODO: Checkin QR Code View -->
 
 
             <CheckBox
@@ -197,6 +201,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Geolocation Enabled"
+                android:layout_margin="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/linearlayout_create_event_checkin_qr"/>
@@ -211,6 +216,7 @@
                 android:layout_marginEnd="8dp"
                 android:textAlignment="center"
                 android:textSize="15sp"
+                android:layout_margin="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/checkbox_create_event_geolocation"/>
@@ -223,6 +229,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Create Event"
+                android:layout_margin="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/text_create_event_location"/>
