--- a/src/app/src/main/res/layout/content_user.xml
+++ b/src/app/src/main/res/layout/content_user.xml
@@ -30,62 +30,31 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="user_name"
-                        android:ellipsize="end"
-                        android:maxLines="1"
                         android:textSize="20sp"
-                        android:textStyle="bold"
-                        android:paddingTop="20dp"
-                        android:paddingStart="20dp"
-                        android:paddingEnd="20dp" />
-                    
-                    <TextView
-                        android:id="@+id/event_number_of_attendees_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:text="number_of_attendees"
-                        android:textSize="15sp"
-                        android:paddingStart="20dp"
-                        android:paddingEnd="20dp" />
+                        android:paddingTop="10dp"
+                        android:paddingStart="10dp"
+                        android:paddingEnd="10dp"
+                        app:layout_constraintBottom_toTopOf="@id/user_phone_number_text"/>
 
                     <TextView
-                        android:id="@+id/event_status_check_in_text"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/user_phone_number_text"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:text="check_in_status"
+                        android:text="phone_number"
                         android:textSize="15sp"
-                        android:paddingStart="20dp"
-                        android:paddingEnd="20dp" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <TextView
-                        android:id="@+id/event_date_time_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:text="date_time"
-                        android:textSize="15sp"
-                        android:paddingStart="20dp"
-                        android:paddingEnd="20dp" />
+                        android:paddingStart="10dp"
+                        android:paddingEnd="10dp"
+                        app:layout_constraintTop_toBottomOf="@id/user_name_text" />
 
                     <TextView
-                        android:id="@+id/event_status_sign_up_text"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/user_number_of_checkins"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:text="sign_up_status"
+                        android:text="number_of_checkins"
                         android:textSize="15sp"
-                        android:paddingStart="20dp"
-                        android:paddingEnd="20dp" />
+                        android:paddingStart="10dp"
+                        android:paddingEnd="10dp"
+                        app:layout_constraintTop_toBottomOf="@id/user_phone_number_text"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </LinearLayout>
