--- a/src/app/src/main/res/layout/fragment_edit_event.xml
+++ b/src/app/src/main/res/layout/fragment_edit_event.xml
@@ -194,7 +194,8 @@
                 android:backgroundTint="#5A5858"
                 android:text="EXPORT EVENT QR CODE"
                 android:textSize="15dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:visibility="invisible"/>
         </LinearLayout>
 
         <TextView
@@ -230,7 +231,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edit_event_check_in_code" />
+            app:layout_constraintTop_toBottomOf="@+id/edit_event_check_in_code"
+            android:visibility="invisible"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/edit_event_update"
