--- a/src/app/src/main/res/layout/fragment_profile.xml
+++ b/src/app/src/main/res/layout/fragment_profile.xml
@@ -31,7 +31,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="50sp"
             android:contentDescription="Avatar Placeholder"
-            android:scaleType="centerCrop"
+            android:scaleType="fitCenter"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
