--- a/src/app/src/main/res/layout/fragment_edit_event.xml
+++ b/src/app/src/main/res/layout/fragment_edit_event.xml
@@ -195,7 +195,7 @@
                 android:text="EXPORT EVENT QR CODE"
                 android:textSize="15dp"
                 android:layout_weight="1"
-                android:visibility="invisible"/>
+                />
         </LinearLayout>
 
         <TextView
@@ -219,6 +219,12 @@
             app:layout_constraintTop_toBottomOf="@+id/edit"
             tools:src="@tools:sample/avatars" />
 
+        <ImageView
+            android:id="@+id/promote_code"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:visibility="invisible" />
+
         <Button
             android:id="@+id/edit_event_export_checkin_code"
             android:layout_width="0dp"
@@ -232,7 +238,7 @@
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edit_event_check_in_code"
-            android:visibility="invisible"/>
+            />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/edit_event_update"
