--- a/src/app/src/main/res/layout/fragment_create_notification.xml
+++ b/src/app/src/main/res/layout/fragment_create_notification.xml
@@ -30,6 +30,7 @@
         android:id="@+id/create_notification_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="Type your annoucement here!"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/create_notification_button">
