--- a/src/app/src/main/res/navigation/mobile_navigation.xml
+++ b/src/app/src/main/res/navigation/mobile_navigation.xml
@@ -39,10 +39,12 @@
         android:name="com.example.qrcheckin.user.editevent.EditEventFragment"
         android:label="Edit Events"
         tools:layout="@layout/fragment_edit_event"
-        />
+        >
         <action
             android:id="@+id/action_nav_edit_event_to_nav_create_notification"
             app:destination="@id/nav_create_notifications"/>
+    </fragment>
+
     <fragment
         android:id="@+id/nav_explore_event"
         android:name="com.example.qrcheckin.user.exploreevent.ExploreEventFragment"
