--- a/src/app/src/main/res/layout/content_user.xml
+++ b/src/app/src/main/res/layout/content_user.xml
@@ -15,6 +15,11 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+            <ImageView
+                android:id="@+id/user_profile_image"
+                android:layout_width="100dp"
+                android:layout_height="90dp"
+                android:src="@drawable/ic_launcher_foreground"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
