--- a/src/app/src/main/res/layout/fragment_attendees_signed_up.xml
+++ b/src/app/src/main/res/layout/fragment_attendees_signed_up.xml
@@ -16,6 +16,7 @@
             android:id="@+id/list_empty_text_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:visibility="invisible"
             android:text="No one has signed up for this event"
             android:textSize="20dp"
             android:layout_margin="50dp"
