--- a/src/app/src/main/res/layout/content_all_event.xml
+++ b/src/app/src/main/res/layout/content_all_event.xml
@@ -43,6 +43,8 @@
                         android:layout_height="wrap_content"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
+                        android:ellipsize="end"
+                        android:maxLines="1"
                         android:text="host_name"
                         android:textSize="15sp"
                         android:paddingStart="20dp"
