--- a/src/app/src/main/res/layout/fragment_edit_event.xml
+++ b/src/app/src/main/res/layout/fragment_edit_event.xml
@@ -249,13 +249,15 @@
             app:layout_constraintStart_toEndOf="@+id/edit_event_check_in_code" />
 
         <org.osmdroid.views.MapView
+            xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/osmmap"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             app:layout_constraintTop_toBottomOf="@+id/edit_event_export_checkin_code"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="16dp"/>
+            android:layout_marginTop="16dp"
+            android:clickable="true"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
