--- a/src/app/src/main/res/navigation/mobile_navigation.xml
+++ b/src/app/src/main/res/navigation/mobile_navigation.xml
@@ -79,7 +79,11 @@
         android:id="@+id/nav_all_event"
         android:name="com.example.qrcheckin.admin.allevents.AllEventsFragment"
         android:label="@string/nav_all_event"
-        tools:layout="@layout/fragment_all_events"/>
+        tools:layout="@layout/fragment_all_events">
+        <action
+            android:id="@+id/action_nav_all_event_to_nav_view_event"
+            app:destination="@id/nav_view_event" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_all_images"
