View All Images

--- a/src/app/src/main/res/layout/content_image.xml
+++ b/src/app/src/main/res/layout/content_image.xml
@@ -14,6 +14,7 @@
             android:id="@+id/single_image"
             android:layout_width="match_parent"
             android:layout_height="100dp"
+            android:layout_gravity="center"
             android:contentDescription="An Image"
             android:layout_margin="20dp"
             android:scaleType="fitCenter"
