--- a/src/app/src/main/res/layout/content_profile_admin.xml
+++ b/src/app/src/main/res/layout/content_profile_admin.xml
@@ -9,7 +9,8 @@
         android:id="@+id/profileCardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="15dp"
         app:cardCornerRadius="18dp"
         app:cardElevation="5dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,11 +20,10 @@
         <LinearLayout
             android:id="@+id/profileLinearLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="horizontal"
             android:padding="16dp">
 
-            <!-- Profile Picture -->
             <ImageView
                 android:id="@+id/adminProfilePicture"
                 android:layout_width="80dp"
@@ -40,7 +40,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <!-- Profile Name -->
                 <TextView
                     android:id="@+id/adminProfileName"
                     android:layout_width="wrap_content"
@@ -49,7 +48,7 @@
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
-                <!-- Phone Number -->
+
                 <TextView
                     android:id="@+id/adminProfilePhoneNumber"
                     android:layout_width="wrap_content"
@@ -57,7 +56,6 @@
                     android:text="Phone number"
                     android:textSize="14sp" />
 
-                <!-- Gmail -->
                 <TextView
                     android:id="@+id/adminProfileEmail"
                     android:layout_width="wrap_content"
