--- a/src/app/src/main/res/layout/fragment_edit_event.xml
+++ b/src/app/src/main/res/layout/fragment_edit_event.xml
@@ -161,6 +161,7 @@
                 android:text="SHOW SIGN-UPS"
                 android:textSize="15dp"
                 android:layout_weight="1" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -247,6 +248,19 @@
             app:layout_constraintHorizontal_bias="1.0"
             app:srcCompat="@android:drawable/ic_menu_edit"
             app:layout_constraintStart_toEndOf="@+id/edit_event_check_in_code" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/updateEventPoster"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
+            android:layout_marginEnd="24dp"
+            android:clickable="true"
+            android:src="@android:drawable/ic_menu_edit"
+            app:layout_constraintBottom_toTopOf="@+id/edit_event_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/edit_event_profile"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
